--- a/_assets/calendars/holidays_calendar.sp_castelldefels_base.2026.yml
+++ b/_assets/calendars/holidays_calendar.sp_castelldefels_base.2026.yml
@@ -1,4 +1,4 @@
-# https://irbarcelona.org/information/public-holidays-calendar-barcelona/
+# https://calendario-laboral.com/2026/cataluna
 ---
 - title: "New Year's Day"
   date: 01/01/2026
@@ -8,25 +8,19 @@
   date: 03/04/2026
 - title: "Easter Monday"
   date: 06/04/2026
-- title: "Labour day"
+- title: "Labour Day"
   date: 01/05/2026
-- title: "Pentecost"
-  date: 24/05/2026
-- title: "Sant Joan Midsummer solstice"
+- title: "St. John's Day"
   date: 24/06/2026
 - title: "Assumption of the Virgin"
   date: 15/08/2026
-- title: "Catalan National Day"
+- title: "National Day of Catalonia"
   date: 11/09/2026
-- title: "La Mercè"
-  date: 24/09/2026
-- title: "All Saints' Day"
-  date: 01/11/2026
-- title: "Spanish Constitution Day"
-  date: 06/12/2026
+- title: "Spanish National Day"
+  date: 12/10/2026
 - title: "Day of the Immaculate Conception"
   date: 08/12/2026
 - title: "Christmas Day"
   date: 25/12/2026
-- title: "Boxing Day"
+- title: "St. Stephen's Day (Boxing Day)"
   date: 26/12/2026
